--- a/essent-savings-program/e2e/.eslintrc.json
+++ b/essent-savings-program/e2e/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": ["../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": { "project": ["./tsconfig*?.json"] },
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
