--- a/essent-savings-program/package.json
+++ b/essent-savings-program/package.json
@@ -27,6 +27,7 @@
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.62.0",
     "esbuild": "^0.19.2",
