feat: add api to register a deposit, update account models and previous apis

--- a/essent-savings-program/tsconfig.spec.json
+++ b/essent-savings-program/tsconfig.spec.json
@@ -3,12 +3,13 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node", "mocha"]
   },
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "babel.config.cjs"
   ]
 }
