--- a/essent-savings-program/.eslintrc.json
+++ b/essent-savings-program/.eslintrc.json
@@ -6,7 +6,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": { "project": ["./tsconfig*?.json"] },
   "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint", "import"
   ],
   "rules": {
     
