--- a/essent-savings-program/package.json
+++ b/essent-savings-program/package.json
@@ -15,6 +15,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@nx/esbuild": "17.0.3",
     "@nx/eslint": "17.0.3",
     "@nx/eslint-plugin": "17.0.3",
@@ -25,7 +27,8 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/express": "~4.17.13",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.8",
+    "@types/mocha": "^10.0.4",
     "@types/node": "~18.7.1",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -36,12 +39,12 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "jest": "^29.4.1",
+    "jest": "^29.7.0",
     "jest-environment-node": "^29.4.1",
     "nx": "17.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
   }
 }
