fix: add unit tests for all apis

--- a/essent-savings-program/.eslintrc.json
+++ b/essent-savings-program/.eslintrc.json
@@ -11,5 +11,5 @@
   "rules": {
     
   },
-  "ignorePatterns": ["src/**/*.test.ts"]
+  "ignorePatterns": ["src/**/*.test.ts", "dist/*", "tmp/*", "jest.preset.js"]
 }
