--- a/essent-savings-program/package.json
+++ b/essent-savings-program/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "NODE_ENV=test jest --forceExit"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +43,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "17.0.3",
     "prettier": "^2.6.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
